--- a/Style.css
+++ b/Style.css
@@ -61,11 +61,15 @@ a {
     padding-top: 60px;
     margin-top: -10px;
 }
+.home {
+	padding: 30px;
+	margin-left: 80%; 
+	margin-right: 1px;
+	position: sticky;
+}
 
 
-
-
-
+/* zombie animation */
 .shape {
 	-webkit-transform-style: preserve-3d;
 	-webkit-animation: spin 8s infinite linear;
